refactor: improve code readability and streamline input/output handling in ExternalSorting2